2024-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version,Date): Release 0.3.1

2024-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper.cpp: Renamed from ulid-main.cpp
	* src/ulid/: Regrouped upstream header library in custom directory

	* README.md: Several more edits, new badges

2024-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): New maintainer

	* *: A number of files have been removed making the package smaller
	and lighter, a few URLs have been updated to the new repo, manual
	pages have been aligned, new alias ulid() added

	* local/patches/ulid_0.3.0.patch: Document patch needed for CRAN
	compliance in case upstream changes again and we need to back his out