@@ -1,3 +1,15 @@
+2024-05-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version,Date): Roll micro version and date
+
+	* README.md: Document current upstream time-resolution limitation
+	* src/wrapper.cpp: Idem
+	* R/RcppExports.R: Idem
+	* man/ulid.Rd: Idem
+	* src/RcppExports.cpp: Updated
+
+	* READNE.md: Add two badges
+
 2024-04-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version,Date): Release 0.3.1
